--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <body>
 <h1>
     Page is underConstruction
-
-    <button><a href="https://uzairkamalyz.github.io/portfolio/"> Portfolio </a></button>
+    <br>
+    You can still go and checkout my protfolio ;)
+    <Br>
+    <button type="button"><a href="https://uzairkamalyz.github.io/portfolio/"> Portfolio </a></button>
 </h1>
 </body>
 </html>
