--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h1>
     Page is underConstruction
     <br>
-    You can still go and checkout my protfolio ;)
+    You can still go and checkout my portfolio ;)
     <Br>
     <button type="button"><a href="https://uzairkamalyz.github.io/portfolio/"> Portfolio </a></button>
 </h1>
