--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <h1>
-    Page is underConstruction
+    Page is under construction... Please wait...
     <br>
     You can still go and checkout my portfolio ;)
     <Br>
