--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <html>
-<body>
-<h1>
-    Page is under construction... Please wait...
-    <br>
-    You can still go and checkout my portfolio ;)
-    <Br>
-    <button type="button"><a href="https://uzairkamalyz.github.io/portfolio/"> Portfolio </a></button>
-</h1>
-</body>
+<head>
+    <meta http-equiv="refresh" content="0;url=https://uzairkamalyz.github.io/cv/" />
+    <title></title>
+</head>
+<body></body>
 </html>
